microservice-E-commerce/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: nginx-web
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing # Makes the ALB internet-facing
    alb.ingress.kubernetes.io/target-type: ip # Target IP addresses of pods
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]' # Listen on HTTP port
    # alb.ingress.kubernetes.io/subnets: "subnet-xyz1234567890abcd, subnet-xyz0987654321efgh"
  labels:
    app: frontend
spec:
  ingressClassName: alb # Specifies the ingress class to use AWS ALB
  rules:
  - host: ecommerce.azher.site # Replace with your domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend # Name of your frontend service
            port:
              number: 80 # Port of your frontend service
